# agabpylib

./: .gitignore  .readthedocs.yml  AUTHORS.md  AUTHORS.rst  HISTORY.rst  LICENSE  README.md  README.rst  pyproject.toml  readthedocs.yml  setup.py
.github/workflows/: repoviz.yml
agabpylib/: __init__.py
agabpylib/densityestimation/: __init__.py  kde.py
agabpylib/fittingdata/: __init__.py  fitpolynomials.py
agabpylib/gaia/: __init__.py  edrthree.py  ruwetools.py
agabpylib/mcmc/: __init__.py  metropolis.py  stantools.py
agabpylib/numerical/: __init__.py
agabpylib/numerical/astronomy/: __init__.py  celestialmechanics.py
agabpylib/numerical/integrate/: __init__.py  quadrature.py
agabpylib/numerical/optimize/: __init__.py  (+1 more)
agabpylib/plotting/: __init__.py  agabcolormaps.py  distinct_colours.py  distributions.py  fancyaxes.py  inference.py  plotstyles.py  tools.py
agabpylib/posteriors/: __init__.py  distancefromparallax.py  gaussian.py  magnitudefromflux.py  meanvarnormal.py
agabpylib/simulation/: __init__.py  imf.py  parallaxsurveys.py  starclusters.py
agabpylib/stats/: __init__.py  _continuous_distns.py  distributions.py  moments.py  robustrollingstats.py  robuststats.py
agabpylib/stellarmodels/: __init__.py
agabpylib/templates/: make-a-plot.py
agabpylib/tools/: __init__.py  robustrollingstats.py  robuststats.py
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.md  index.rst
notebooks/: TestClusterSimulationCode.ipynb
notebooks/.ipynb_checkpoints/: TestClusterSimulationCode-checkpoint.ipynb
src/agabpylib/: __init__.py
(+62 files in other folders)
